# SupplyScan

./: Dockerfile  LICENSE  README.md  TECHNOLOGY_OVERVIEW.md  WIKI.md  config.env.example  gitignore  pyproject.toml  requirements.txt
.github/workflows/: supplyscan.yml
frontend/: package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  scan-detail-modal.tsx
frontend/src/lib/: api.ts
supplyscan/: __init__.py  models.py
supplyscan/ai/: __init__.py  claude_explainer.py  explainer_router.py  opencode_explainer.py
supplyscan/cli/: __init__.py  main.py
supplyscan/core/: __init__.py  scanner.py  version_resolver.py
supplyscan/dashboard/: __init__.py  app.py
supplyscan/db/: __init__.py  store.py
supplyscan/detectors/: __init__.py  ast_detector.py  common.py  cve_detector.py  entropy_detector.py  local_feed.py  maintainer.py  network_detector.py  osv_client.py  semgrep_detector.py  typosquat.py  yara_detector.py
supplyscan/hooks/: __init__.py  hook_manager.py  npm_hook.js  sitecustomize.py
supplyscan/rules/: malware.yar
supplyscan/rules/semgrep/: supply_chain.yml
tests/: test_malicious_fixtures.py  test_phase1.py  test_version_resolver.py
tests/malicious/colourama_045/: __init__.py  description.md  expected_findings.json  setup.py
tests/malicious/event_stream_336/: description.md  expected_findings.json  index.js  package.json
tests/malicious/fake_numpy_fast/: __init__.py  description.md  expected_findings.json  setup.py
(+4 files in other folders)
