[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "supplyscan"
version = "0.1.0"
description = "Autonomous supply chain attack detector."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "libcst>=1.4.0",
  "packaging>=24.0",
  "platformdirs>=4.2.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "rich>=13.7.1",
  "semgrep>=1.78.0",
  "sqlmodel>=0.0.22",
  "uvicorn>=0.30.0",
  "yara-python>=4.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]

[project.scripts]
supplyscan = "supplyscan.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["supplyscan"]

[tool.hatch.build.targets.wheel.force-include]
"supplyscan/hooks/npm_hook.js" = "supplyscan/hooks/npm_hook.js"
"supplyscan/rules/malware.yar" = "supplyscan/rules/malware.yar"
"supplyscan/rules/semgrep/supply_chain.yml" = "supplyscan/rules/semgrep/supply_chain.yml"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
